tests/ui/suggestions/type-ascription-instead-of-variant.stderr
error: path separator must be a double colon
  --> $DIR/type-ascription-instead-of-variant.rs:3:19
   |
LL |     let _ = Option:Some("");
   |                   ^
   |
help: use a double colon instead
   |
LL |     let _ = Option::Some("");
   |                    +

error: aborting due to 1 previous error

